feat: add published status in create offer
